new in PrayerRequest

--- a/PrayerRequest.html
+++ b/PrayerRequest.html
@@ -12,7 +12,7 @@
     <h2>Prayer Request</h2>
 
     <!-- Success message container (hidden by default) -->
-    <div id="success-message" style="display: none; color: green; text-align: center; margin-top: 20px;">
+    <div id="success-message" style="display: none; color: white; text-align: center; margin-top: 20px;">
         Your prayer request has been successfully submitted. Thank you!
     </div>
 
