--- a/Shop.html
+++ b/Shop.html
@@ -11,6 +11,8 @@
     <div class="shop-container">
         <h1>Shop Online</h1>
 
+        <!-- Search Bar --> <div class="search-bar"> <input type="text" id="search-input" placeholder="Search for products..."> <button id="search-button">Search</button> </div>
+
         <div class="category">
             <h2>Music Instruments</h2>
             <div class="product">
@@ -49,8 +51,8 @@
                 <img class="product-image" src="pictures/WhatsApp Image 2024-08-15 at 16.02.53.jpeg" alt="Music Instruments">
                 <div class="product-info">
                     <h3>Traditional Drum</h3>
-                    <p>Price: ZAR 2999.00</p>
-                    <button onclick="addToCart('Traditional Drum', 2999.00)">Add to Cart</button>
+                    <p>Price: ZAR 900.00</p>
+                    <button onclick="addToCart('Traditional Drum', 900.00)">Add to Cart</button>
                 </div>
             </div>
             <div class="product">
