--- a/podcast.html
+++ b/podcast.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Podcast Name</title>
     <link rel="stylesheet" href="podcast.css">
-    <a href="javascript:history.back()" class="back-button">←Back</a>
+    <a href="javascript:history.back()" class="back-button">← Back</a>
+    <script src="podcasts.js" defer></script>
 </head>
 <body>
     <header>
@@ -14,10 +15,46 @@
     </header>
 
     <main>
-        <!-- Existing content -->
-
         <section class="subscription">
-            <!-- Existing sections for managing podcasts -->
+            <h2>Manage Podcasts</h2>
+            <div class="button-group">
+                <button id="toggleUpload">Upload Your Podcast</button>
+                <button id="toggleLink">Add Podcast Link</button>
+                <button id="toggleGroups">Manage Groups</button>
+            </div>
+
+            <div id="uploadSection" class="upload-section" style="display: none;">
+                <form id="uploadPodcast" enctype="multipart/form-data">
+                    <input type="text" name="title" placeholder="Podcast Title" required>
+                    <textarea name="description" placeholder="Description" required></textarea>
+                    <input type="file" name="audio" accept="audio/*">
+                    <input type="file" name="video" accept="video/*">
+                    <button type="submit">Upload Podcast</button>
+                </form>
+            </div>
+
+            <div id="linkSection" class="upload-section" style="display: none;">
+                <form id="addPodcastLink">
+                    <input type="text" name="title" placeholder="Podcast Title" required>
+                    <textarea name="description" placeholder="Description" required></textarea>
+                    <input type="url" name="youtube_link" placeholder="YouTube Link" required>
+                    <button type="submit">Add Podcast Link</button>
+                </form>
+            </div>
+
+            <div id="groupSection" class="upload-section" style="display: none;">
+                <h2>Create or Manage Groups</h2>
+                <form id="groupForm">
+                    <div>
+                        <label for="groupName">Group Name:</label>
+                        <input type="text" id="groupName" name="groupName" required>
+                    </div>
+                    <div id="episodeSelection">
+                        <!-- Episodes will be dynamically populated here with checkboxes -->
+                    </div>
+                    <button type="submit">Create Group</button>
+                </form>
+            </div>
         </section>
 
         <section class="episode-list">
@@ -43,24 +80,6 @@
         <p><a href="mailto:Apostolic@TV.com">Contact Us</a></p>
     </footer>
 
-    <!-- Comment Modal -->
-    <div id="commentModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Comments</h2>
-            <div id="commentList" class="comment-list">
-                <!-- Comments will be dynamically inserted here -->
-            </div>
-            <form id="commentForm">
-                <input type="hidden" id="episodeId" name="podcast_id">
-                <input type="text" id="userName" name="user_name" placeholder="Your Name" required>
-                <textarea id="commentText" name="comment_text" placeholder="Your Comment" required></textarea>
-                <button type="submit">Add Comment</button>
-            </form>
-        </div>
-    </div>
-
-    <script src="podcasts.js"></script>
     <script>
         // Fetch podcast episodes from the API
         async function fetchPodcasts() {
@@ -68,71 +87,86 @@
             const podcasts = await response.json();
 
             const episodeGrid = document.getElementById('episodeGrid');
+            const episodeSelection = document.getElementById('episodeSelection');
             episodeGrid.innerHTML = ''; // Clear existing content
+            episodeSelection.innerHTML = ''; // Clear existing content
 
             podcasts.forEach(podcast => {
                 // Populate episode list for display
                 const episode = document.createElement('div');
                 episode.classList.add('episode');
-                episode.dataset.id = podcast.id; // Add dataset ID to identify the episode
                 episode.innerHTML = `
                     <h3>${podcast.title}</h3>
                     <p>${podcast.description}</p>
                     ${podcast.youtube_link ? `<iframe width="560" height="315" src="${podcast.youtube_link.replace('watch?v=', 'embed/')}" allowfullscreen></iframe>` : ''}
-                    ${podcast.video_url ? `<video width="320" height="240" controls>
-                        <source src="${podcast.video_url}" type="video/mp4">
+                    ${podcast.audio_file ? `<audio controls>
+                        <source src="${podcast.audio_file}" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>` : ''}
+                    <br>
+                    ${podcast.video_file ? `<video width="320" height="240" controls>
+                        <source src="${podcast.video_file}" type="video/mp4">
                         Your browser does not support the video element.
                     </video>` : ''}
                     <a href="${podcast.youtube_link}" target="_blank">Watch on YouTube</a>
-                    <p>Likes: <span class="like-count" data-id="${podcast.id}">${podcast.like_count}</span></p>
-                    <button class="like-button" onclick="likePodcast('${podcast.id}')">Like</button>
-                    <button class="delete-button" onclick="deletePodcast('${podcast.id}')">Delete</button>
-                    <button class="comment-button" onclick="openCommentModal('${podcast.id}')">Comments</button>
+                    <br>
+                    <button onclick="likePodcast(${podcast.id})">Like <span id="like-count-${podcast.id}">${podcast.like_count}</span></button>
+                    <button onclick="deletePodcast(${podcast.id})">Delete</button>
                 `;
                 episodeGrid.appendChild(episode);
+
+                // Populate episode selection for grouping
+                const checkbox = document.createElement('input');
+                checkbox.type = 'checkbox';
+                checkbox.id = `episode-${podcast.id}`;
+                checkbox.name = 'episode';
+                checkbox.value = podcast.id;
+
+                const label = document.createElement('label');
+                label.htmlFor = checkbox.id;
+                label.textContent = podcast.title;
+
+                episodeSelection.appendChild(checkbox);
+                episodeSelection.appendChild(label);
+                episodeSelection.appendChild(document.createElement('br'));
             });
         }
 
-        // Function to delete a podcast
-        async function deletePodcast(id) {
-            const response = await fetch(`/api/podcasts/${id}`, {
-                method: 'DELETE',
-            });
-            const result = await response.json();
-            if (result.success) {
-                // Remove the podcast from the display
-                const episodeElement = document.querySelector(`.episode[data-id="${id}"]`);
-                if (episodeElement) {
-                    episodeElement.remove();
-                }
-                alert('Podcast deleted successfully');
-            } else {
-                alert('Failed to delete podcast');
-            }
-        }
-
-        // Function to like a podcast
-        async function likePodcast(id) {
-            const response = await fetch(`/api/podcasts/${id}/like`, {
+        // Like a podcast
+        async function likePodcast(podcastId) {
+            const response = await fetch(`/api/podcasts/${podcastId}/like`, {
                 method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ user_id: 1 }) // Replace with actual user ID if necessary
             });
+
             const result = await response.json();
             if (result.success) {
-                alert('Podcast liked successfully');
-                // Update like count on the UI
-                const likeCountElement = document.querySelector(`.like-count[data-id="${id}"]`);
-                if (likeCountElement) {
-                    likeCountElement.textContent = result.new_like_count; // Update with the new like count
-                }
+                // Update the like count on the page
+                document.getElementById(`like-count-${podcastId}`).textContent = result.new_like_count;
             } else {
-                alert('Failed to like podcast');
+                alert('Error liking podcast');
             }
         }
 
-        // Call the fetch function when the page loads
-        window.onload = fetchPodcasts;
+        // Delete a podcast
+        async function deletePodcast(podcastId) {
+            if (confirm('Are you sure you want to delete this podcast?')) {
+                const response = await fetch(`/api/podcasts/${podcastId}`, {
+                    method: 'DELETE'
+                });
+                const result = await response.json();
+                if (result.success) {
+                    fetchPodcasts(); // Refresh the podcast list
+                } else {
+                    alert('Error deleting podcast');
+                }
+            }
+        }
 
-        // Handle form submissions
+        // Form submissions
         document.getElementById('uploadPodcast').onsubmit = async (e) => {
             e.preventDefault();
             const formData = new FormData(e.target);
@@ -175,7 +209,7 @@
             e.target.reset(); // Reset the form
         };
 
-        // Toggle upload section
+        // Toggle sections
         document.getElementById('toggleUpload').onclick = () => {
             const uploadSection = document.getElementById('uploadSection');
             uploadSection.style.display = uploadSection.style.display === 'none' ? 'block' : 'none';
@@ -183,7 +217,6 @@
             document.getElementById('groupSection').style.display = 'none'; // Hide group section if upload is shown
         };
 
-        // Toggle link section
         document.getElementById('toggleLink').onclick = () => {
             const linkSection = document.getElementById('linkSection');
             linkSection.style.display = linkSection.style.display === 'none' ? 'block' : 'none';
@@ -191,7 +224,6 @@
             document.getElementById('groupSection').style.display = 'none'; // Hide group section if link is shown
         };
 
-        // Toggle group section
         document.getElementById('toggleGroups').onclick = () => {
             const groupSection = document.getElementById('groupSection');
             groupSection.style.display = groupSection.style.display === 'none' ? 'block' : 'none';
@@ -199,95 +231,8 @@
             document.getElementById('linkSection').style.display = 'none'; // Hide link section if groups are shown
         };
 
-        // Function to open the comment modal and load comments
-        function openCommentModal(episodeId) {
-            const modal = document.getElementById('commentModal');
-            const commentList = document.getElementById('commentList');
-            const closeModal = document.querySelector('.close');
-
-            // Clear existing comments
-            commentList.innerHTML = '';
-
-            // Fetch comments for the episode
-            fetch(`/api/podcasts/${episodeId}/comments`)
-                .then(response => response.json())
-                .then(comments => {
-                    comments.forEach(comment => {
-                        const commentElement = document.createElement('div');
-                        commentElement.classList.add('comment');
-                        commentElement.dataset.id = comment.id;
-                        commentElement.innerHTML = `
-                            <p><strong>${comment.user_name}</strong>: ${comment.comment_text}</p>
-                            ${comment.user_name === getCurrentUsername() ? '<button onclick="deleteComment(this)">Delete</button>' : ''}
-                        `;
-                        commentList.appendChild(commentElement);
-                    });
-                });
-
-            // Set the episode ID in the form
-            document.getElementById('episodeId').value = episodeId;
-
-            // Show modal
-            modal.style.display = 'block';
-
-            // Close modal when clicking the close button
-            closeModal.onclick = () => {
-                modal.style.display = 'none';
-            };
-
-            // Close modal when clicking outside of the modal content
-            window.onclick = (event) => {
-                if (event.target === modal) {
-                    modal.style.display = 'none';
-                }
-            };
-
-            // Handle comment form submission
-            document.getElementById('commentForm').onsubmit = async (e) => {
-                e.preventDefault();
-                const formData = new FormData(e.target);
-                formData.append('podcast_id', episodeId);
-
-                const response = await fetch('/api/podcasts/comments', {
-                    method: 'POST',
-                    body: formData
-                });
-                const result = await response.json();
-                if (result.success) {
-                    alert('Comment added successfully');
-                    // Reload comments
-                    openCommentModal(episodeId);
-                } else {
-                    alert('Failed to add comment');
-                }
-            };
-        }
-
-        // Function to delete a comment
-        function deleteComment(button) {
-            const commentElement = button.parentElement;
-            const commentId = commentElement.dataset.id;
-
-            fetch(`/api/podcasts/comments/${commentId}`, {
-                method: 'DELETE'
-            })
-            .then(response => response.json())
-            .then(result => {
-                if (result.success) {
-                    commentElement.remove();
-                    alert('Comment deleted successfully');
-                } else {
-                    alert('Failed to delete comment');
-                }
-            });
-        }
-
-        // Dummy function to simulate getting the current username
-        function getCurrentUsername() {
-            // Replace with actual user authentication logic
-            return 'User123';
-        }
+        // Call the fetch function when the page loads
+        window.onload = fetchPodcasts;
     </script>
 </body>
-
 </html>
