--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,6 @@
             <div class="menu-column">
                 <button class="menu-btn" onclick="window.location.href='Word_of_the_day.html'">Word of the Day</button>
                 <button class="menu-btn" onclick="window.location.href='podcast.html'">Podcasts</button>
-                <button class="menu-btn" onclick="window.location.href='Inspiration.html'">Inspiration</button>
                 <button class="menu-btn" onclick="window.location.href='PrayerRequest.html'">Prayer Request</button>
                 <button class="menu-btn" onclick="window.location.href='Shop.html'">Shop Online</button>
                 <button class="menu-btn" onclick="window.location.href='AboutUs.html'">About Us</button>
@@ -27,10 +26,12 @@
             </div>
             <div class="menu-column">
                 <button class="menu-btn" onclick="window.location.href='Donations.html'">Donations</button>
-                <button class="menu-btn" onclick="window.location.href='Chat.html'">Chat</button>
+                <button class="menu-btn" onclick="window.location.href='TVChannels.html'">Church TV</button>
                 <button class="menu-btn" onclick="window.location.href='Channel.html'">Create Channel</button>
                 <button class="menu-btn" onclick="window.location.href='Member_profile.html'">Members</button>
-                <button class="menu-btn" onclick="window.location.href='Events.html'">Church Events</button>         
+                <button class="menu-btn" onclick="window.location.href='Events.html'">Church Events</button>
+                <button class="menu-btn" onclick="window.location.href='Chat.html'">Chat</button>         
+         
             </div>
         </div>
         
