--- a/TV_Channels.html
+++ b/TV_Channels.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your TV Channels</title>
-    <link rel="stylesheet" href="podcast.css">
+    <link rel="stylesheet" href="TVChannels.css">
     <a href="javascript:history.back()" class="back-button">← Back</a>
 </head>
 <body>
