--- a/Home.html
+++ b/Home.html
@@ -30,6 +30,21 @@
             </div>
         </header>
 
+        <!-- Slideshow -->
+        <div class="slideshow-container">
+            <div class="slide fade">
+                <img src="Slide.png" alt="Slide 1">
+            </div>
+            <div class="slide fade">
+                <img src="Slide2.png" alt="Slide 2">
+            </div>
+            <div class="slide fade">
+                <img src="slide4.png" alt="Slide 3">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+
         <div class="content">
             <h1 class="main-heading">Church App</h1>
             <div class="text-and-image">
@@ -45,11 +60,10 @@
                 <img src="home.jpg" alt="Church Image" class="side-image">
             </div>
             
-            <button  class="cta-button" onclick="window.location.href='Signup.html'">Get Started</button>
-
+            <button class="cta-button" onclick="window.location.href='Signup.html'">Get Started</button>
 
             <h2 class="main-heading">Prayer Request</h2>
-            <div class="text-and-image prayer-request-section"> <!-- Updated class here -->
+            <div class="text-and-image prayer-request-section">
                 <img src="prayer.png" alt="Church Image" class="side-image">
                 <p class="sub-text">
                     The Prayer Request feature plays a crucial role in strengthening the 
@@ -73,7 +87,7 @@
             </div>
 
             <h1 class="main-heading">Shop</h1>
-            <div class="text-and-image reverse-text-and-image"> <!-- Reverse for this section -->
+            <div class="text-and-image reverse-text-and-image">
                 <img src="shop.jpg" alt="Church Image" class="side-image">
                 <p class="sub-text">With Shop Online, churches can integrate an e-commerce aspect into their 
                     app, allowing users to purchase religious materials, church merchandise, or even event 
@@ -97,7 +111,7 @@
         </div>
 
         <h1 class="main-heading">TV</h1>
-        <div class="text-and-image reverse-text-and-image"> <!-- Reverse for this section -->
+        <div class="text-and-image reverse-text-and-image">
             <img src="TV.jpg" alt="Church Image" class="side-image">
             <p class="sub-text">The Channels feature allows users to explore various ministries or 
                 departments within the church, such as youth groups, Bible study classes, or women’s and 
@@ -107,7 +121,6 @@
                 church that are most relevant to them, fostering a sense of belonging and targeted spiritual
                   growth.</p>
         </div>
-
 
         <h2 class="main-heading">Scripture</h2>
         <div class="text-and-image">
@@ -123,7 +136,7 @@
         </div>
 
         <h1 class="main-heading">Podcast</h1>
-        <div class="text-and-image reverse-text-and-image"> <!-- Reverse for this section -->
+        <div class="text-and-image reverse-text-and-image">
             <img src="podcast.png" alt="Church Image" class="side-image">
             <p class="sub-text">The Podcast feature extends the reach of the church’s teachings by offering
                  audio content, such as recorded sermons, devotionals, or religious discussions, that users
@@ -148,36 +161,161 @@
         </div>
 
         <h1 class="main-heading">Inspiration</h1>
-        <div class="text-and-image reverse-text-and-image"> <!-- Reverse for this section -->
+        <div class="text-and-image reverse-text-and-image">
             <img src="inspiration.jpg" alt="Church Image" class="side-image">
             <p class="sub-text">The Inspiration menu tab on our app is your go-to destination for 
-                discovering new and exciting content that sparks creativity and enjoyment. Here,
-                 you'll find curated recommendations tailored to your interests, including trending shows,
-                  must-watch movies, and hidden gems across various genres. Whether you're in the mood for 
-                  something uplifting, thought-provoking, or just plain entertaining, the Inspiration tab offers
-                   a constantly updated feed of personalized suggestions and thematic collections. Dive into specially
-                    crafted playlists, explore thematic guides, and stay updated with the latest in entertainment to keep
-                     your viewing experience fresh and engaging. Let the Inspiration tab be your guide to endless possibilities
-                      and new favorites!</p>
+                discovering new and exciting content that sparks creativity and enjoyment. Here, you’ll find 
+                an array of uplifting videos, motivational messages, and stories of faith that are designed 
+                to inspire and uplift you. Whether you’re seeking encouragement, learning about inspiring figures,
+                or exploring faith-based content, the Inspiration tab provides a curated collection of resources 
+                to support your spiritual journey and enrich your experience with engaging and meaningful content.
+            </p>
         </div>
 
-    </div>
-
-        <div class="button-group">
-            <button onclick="window.location.href='AboutUs.html'">About Us</button>
+        <h1 class="main-heading">Prayer Request</h1>
+        <div class="text-and-image prayer-request-section">
+            <img src="prayer.png" alt="Church Image" class="side-image">
+            <p class="sub-text">
+                The Prayer Request feature plays a crucial role in strengthening the 
+                spiritual connection among church members. Through this feature, users can submit 
+                their prayer needs or intercede on behalf of others by sharing specific requests. 
+                It encourages a supportive environment where the congregation can pray for each other, 
+                either privately or as part of a public prayer chain.
+            </p>
         </div>
+
+        <h1 class="main-heading">Donations</h1>
+        <div class="text-and-image">
+            <p class="sub-text">
+                Donations in the church app provide a secure and accessible way for 
+                members to give their tithes, offerings, or special contributions. By enabling online
+                giving, the app removes barriers that might exist in traditional methods, making it easier 
+                for the congregation to support the church’s ministries consistently. It also allows for 
+                recurring donations and provides transparency through digital receipts.
+            </p>
+            <img src="donation.png" alt="Church Image" class="side-image">
+        </div>
+
+        <h1 class="main-heading">Shop</h1>
+        <div class="text-and-image reverse-text-and-image">
+            <img src="shop.jpg" alt="Church Image" class="side-image">
+            <p class="sub-text">With Shop Online, churches can integrate an e-commerce aspect into their 
+                app, allowing users to purchase religious materials, church merchandise, or even event 
+                tickets. This feature not only serves as a source of revenue for the church but also 
+                enables members to access spiritual books, devotionals, and apparel that deepen their 
+                faith journey. The ease of online shopping within the app means that members can support 
+                the church financially while also benefiting from the resources they purchase.</p>
+        </div>
+
+        <h2 class="main-heading">Events</h2>
+        <div class="text-and-image">
+            <p class="sub-text">
+                The Church Events section serves as an essential organizational tool, providing a calendar that
+                lists all upcoming church services, community gatherings, workshops, or special programs.
+                Users can stay informed about what’s happening in their church community, with options to RSVP,
+                share events, or receive reminders. This feature enhances participation by keeping everyone in the loop and allowing 
+                seamless planning and coordination for both small and large-scale church functions.
+            </p>
+            <img src="events.png" alt="Church Image" class="side-image">
+        </div>
+
+        <h1 class="main-heading">TV</h1>
+        <div class="text-and-image reverse-text-and-image">
+            <img src="TV.jpg" alt="Church Image" class="side-image">
+            <p class="sub-text">The Channels feature allows users to explore various ministries or 
+                departments within the church, such as youth groups, Bible study classes, or women’s and 
+                men’s ministries. These channels are dedicated spaces where members can receive specific 
+                updates, content, and events related to their areas of interest. By providing access to these
+                specialized channels, the app makes it easier for users to connect with the parts of the 
+                church that are most relevant to them, fostering a sense of belonging and targeted spiritual
+                  growth.</p>
+        </div>
+
+        <h2 class="main-heading">Scripture</h2>
+        <div class="text-and-image">
+            <p class="sub-text">
+                Word of the Day is a feature designed to offer users daily inspiration and
+                 encouragement from scripture. Each day, a new Bible verse or a brief spiritual 
+                 reflection is shared, allowing members to start or end their day with a message of 
+                 hope and guidance. This feature keeps the congregation spiritually engaged on a regular
+                  basis and serves as a tool for personal growth. The simplicity of daily scripture in the
+                   app makes it easy for users to stay connected to their faith, even amidst a busy schedule..
+            </p>
+            <img src="word.png" alt="Church Image" class="side-image">
+        </div>
+
+        <h1 class="main-heading">Podcast</h1>
+        <div class="text-and-image reverse-text-and-image">
+            <img src="podcast.png" alt="Church Image" class="side-image">
+            <p class="sub-text">The Podcast feature extends the reach of the church’s teachings by offering
+                 audio content, such as recorded sermons, devotionals, or religious discussions, that users
+                  can listen to at any time. This convenience means that even those unable to attend in-person 
+                  services can still engage with the church’s spiritual content throughout their week. Podcasts
+                   also offer a platform for deeper teaching and community-building as users can access sermons or series 
+                   that they might have missed or want to revisit</p>
+        </div>
+
+        <h2 class="main-heading">Members</h2>
+        <div class="text-and-image">
+            <p class="sub-text">
+                The Members menu tab on our app provides a dedicated space for managing and enjoying 
+                your membership benefits. Here, you can view your account details, track your subscription
+                 status, and access exclusive content tailored just for you. The intuitive interface allows 
+                 you to easily update your profile, manage payment options, and explore personalized recommendations
+                based on your viewing history. Additionally, you can view and redeem special offers, participate in
+                member-only events, and get support directly from our team. The Members tab is your hub for making the
+                most out of your membership experience, ensuring that all your preferences and needs are just a tap away.
+            </p>
+            <img src="members.jpg" alt="Church Image" class="side-image">
+        </div>
+
+        <h1 class="main-heading">Inspiration</h1>
+        <div class="text-and-image reverse-text-and-image">
+            <img src="inspiration.jpg" alt="Church Image" class="side-image">
+            <p class="sub-text">The Inspiration menu tab on our app is your go-to destination for 
+                discovering new and exciting content that sparks creativity and enjoyment. Here, you’ll find 
+                an array of uplifting videos, motivational messages, and stories of faith that are designed 
+                to inspire and uplift you. Whether you’re seeking encouragement, learning about inspiring figures,
+                or exploring faith-based content, the Inspiration tab provides a curated collection of resources 
+                to support your spiritual journey and enrich your experience with engaging and meaningful content.
+            </p>
+        </div>
+
+        <button class="cta-button" onclick="window.location.href='Signup.html'">Get Started</button>
 
         <footer class="footer">
             <ul class="footer-links">
-                <li><a href="#">© 2024 Church App. All rights reserved.
-                </a></li>
+                <li><a href="#">© 2024 Church App. All rights reserved.</a></li>
             </ul>
+            <div class="social-media">
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+            </div>
             <button onclick="window.location.href='Login.html'" class="logout-btn">Log out?</button>
         </footer>
     </div>
+
+    <!-- JavaScript for slideshow -->
+    <script>
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let slides = document.getElementsByClassName("slide");
+            for (let i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) { slideIndex = 1 }
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 8000); // Change slide every 3 seconds
+        }
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+    </script>
 </body>
 </html>
-
-
-
- 
