--- a/AboutUs.html
+++ b/AboutUs.html
@@ -32,9 +32,9 @@
                 <img class="mySlides" src="Pictures/Apostolic-TV.jpg">
             </div>
             <p style="color:#0a0a0a; text-align: left; font-size: large;">
-                Welcome to [Church Name], a vibrant community of faith dedicated to spreading the love and teachings of Jesus Christ. Nestled in the heart of [City/Town], our church has been a beacon of hope and spiritual growth for over [number] years. At [Church Name], we believe in the power of prayer, the strength found in fellowship, and the transformative grace of God.
+                <br>Welcome to Apostolic App, a vibrant community of faith dedicated to spreading the love and teachings of Jesus Christ. Nestled in the heart of Centurion, our app has been a beacon of hope and spiritual growth. At Apostolic App, we believe in the power of prayer, the strength found in fellowship, and the transformative grace of God.
                 
-                Our mission is simple yet profound: to create a welcoming environment where individuals and families can deepen their relationship with God and each other. Through inspiring worship services, engaging Bible study groups, and compassionate outreach programs, we strive to serve our community and share the message of God's love. Whether you are exploring your faith for the first time or seeking a church family to grow with, we invite you to join us on this journey of faith, hope, and love at [Church Name].
+                Our mission is simple yet profound: to create a welcoming environment where individuals and families can deepen their relationship with God and each other. Through inspiring worship services, engaging Bible study groups, and compassionate outreach programs, we strive to serve our community and share the message of God's love. Whether you are exploring your faith for the first time or seeking a church family to grow with, we invite you to join us on this journey of faith, hope, and love at Apostolic App.
             </p>
         </div>
     </section>
