--- a/Events.html
+++ b/Events.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/Events.css">
 </head>
 <body>
-    <a href="/Home.html" class="back-button">Back</a> <!-- Back button -->
+    <a href="javascript:history.back()" class="back-button">←Back</a>
 
     <header>
         <h1>Upcoming Church Events</h1>
