--- a/TVChannels.html
+++ b/TVChannels.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="TVChannels.css">
 </head>
 <body>
-    <a href="Home.html" class="back-button">Back</a> <!-- Back button -->
+    <a href="javascript:history.back()" class="back-button">←Back</a>
 
     <header style="background-color: black;">
         <h1>Free TV Channels</h1>
@@ -37,9 +37,9 @@
             <h2>CBS Reality TV</h2>
             <p>Enjoy a variety of TV shows.</p>
         </div>
-        <div class="channel" data-url="https://www.vudu.com">
-            <h2>Vudu</h2>
-            <p>Stream free, ad-supported movies and TV shows.</p>
+        <div class="channel" data-url="https://www3.nhk.or.jp/nhkworld/en/live/">
+            <h2>NHK TV</h2>
+            <p>Stream free, ad-supported.</p>
         </div>
         <div class="channel" data-url="https://www.xumo.tv">
             <h2>Xumo</h2>
