--- a/podcast.html
+++ b/podcast.html
@@ -39,7 +39,7 @@
                 <form id="addPodcastLink">
                     <input type="text" name="title" placeholder="Podcast Title" required>
                     <textarea name="description" placeholder="Description" required></textarea>
-                    <input type="url" name="youtube_link" placeholder="YouTube Link" required>
+                    <input type="url" name="youtube_link" placeholder="YouTube Link (Please make sure it is in Embed format!)" required>
                     <button type="submit">Add Podcast Link</button>
                 </form>
             </div>
