--- a/Chat.html
+++ b/Chat.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link rel="stylesheet" href="Chat.css">
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- Include Socket.IO client library -->
+    <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 </head>
 <body>
     <h1>Chat</h1>
@@ -13,9 +14,8 @@
         <h2>Users</h2>
         <ul id="user-list"></ul>
     </div>
-     <!-- Add this back button inside the header -->
-     <a href="javascript:history.back()" class="back-button">←Back</a>
-    <button><a href="ChatGroup.html">CREATE GROUP+</a></button>
+    <!-- Add this back button inside the header -->
+    <a href="javascript:history.back()" class="back-button">←Back</a>
     <div>
         <div id="chat">
             <h2>Chat with <span id="chat-with">Select a user</span></h2>
@@ -35,7 +35,7 @@
         const sendButton = document.getElementById('send-button');
 
         let selectedUser = '';
-        const socket = io();
+        const socket = io();  // This will now work because the Socket.IO client library is included
 
         // Get logged-in username from localStorage
         const yourUsername = localStorage.getItem('username');
