--- a/Shop.html
+++ b/Shop.html
@@ -282,7 +282,7 @@
                     <option value="medium">Medium</option>
                     <option value="large">Large</option>
                 </select>
-                <button onclick="addToCart('Shirt', 160.00, document.getElementById('Shirt).value)">Add to Cart</button>
+                <button onclick="addToCart('Prayer Sweater', 300.00, document.getElementById('PrayerSweater').value)">Add to Cart</button>
             </div>
         </div>
         <div class="product">
